--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,7 @@
 language: c
 sudo: false
-matrix:
-    include:
-        - os: linux
-          compiler: gcc
-          env: BUILD_TYPE=normal
-        - os: linux
-          compiler: clang
-          env: BUILD_TYPE=normal
+addons:
+    apt:
+        packages:
+            - c-ares
 script: make
