--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language: c
 sudo: false
 addons:
     apt:
+        sources:
+            - ubuntu-toolchain-r-test
         packages:
+            - gcc-4.8
+            - g++-4.8
             - c-ares
 script: make
