--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,6 @@ addons:
         sources:
             - ubuntu-toolchain-r-test
         packages:
-            - gcc-4.8
-            - g++-4.8
-            - c-ares
+            - libc-ares-dev
+            - libev-dev
 script: make
